# PALLET_HIT

./: .gitignore  README.md  apriltag_test.py  calibration_config.json  collision_config.json  ejecutar.md  readme.md
.sisyphus/evidence/: task-3-colcon-build.txt  task-3-installed-file-check.txt  task-3-syntax.txt
backup/20260227/: brazo_completo.usd  brazo_completo_physics.usd  cr20_isaac_bridge_node.py
backup/20260227/cr20_robot/configuration/: cr20_robot_physics.usd  cr20_robot_robot.usd
docs/: SERVO_ACTION_REPORT.md
scripts/: correccion_plano.py  run_yolo.sh
src/DOBOT_6Axis_ROS2_V4/cr20_moveit/: CMakeLists.txt  README.md
src/DOBOT_6Axis_ROS2_V4/cr20_moveit/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/DOBOT_6Axis_ROS2_V4/cr20_moveit/launch/: dobot_moveit.launch.py  moveit_gazebo.launch.py  moveit_isaac.launch.py  real_robot.launch.py
src/DOBOT_6Axis_ROS2_V4/cra_description/: README.md
src/DOBOT_6Axis_ROS2_V4/cra_description/meshes/cr20/: gripper_link.stl
src/DOBOT_6Axis_ROS2_V4/cra_description/urdf/: cr20_Moveit.urdf  cr20_robot.urdf
src/DOBOT_6Axis_ROS2_V4/cra_description/urdf/configuration/: cr20_robot_isaac_physics.usd  cr20_robot_isaac_robot.usd
src/DOBOT_6Axis_ROS2_V4/dobot_bringup_v4/: CMakeLists.txt  README.md
src/DOBOT_6Axis_ROS2_V4/dobot_bringup_v4/config/: param.json
src/DOBOT_6Axis_ROS2_V4/dobot_bringup_v4/include/dobot_bringup/: command.h  cr_robot_ros2.h
src/DOBOT_6Axis_ROS2_V4/dobot_bringup_v4/launch/: dobot_bringup_ros2.launch.py
src/DOBOT_6Axis_ROS2_V4/dobot_bringup_v4/src/: command.cpp  cr_robot_ros2.cpp  main.cpp  parseTool.cpp
src/DOBOT_6Axis_ROS2_V4/dobot_camera/: README.md  package.xml  setup.cfg  setup.py
src/DOBOT_6Axis_ROS2_V4/dobot_camera/dobot_camera/: juice_logic.py  test_juice_logic.py  vision_node.py  yolo_detector.py
src/DOBOT_6Axis_ROS2_V4/dobot_moveit/: README.md  package.xml  setup.py
src/DOBOT_6Axis_ROS2_V4/dobot_moveit/dobot_moveit/: action_move_server.py  calibration_node.py  collision_calibrator.py  depalletizer.py  joint_states.py  scene_manager.py  vision_coordinator.py
src/DOBOT_6Axis_ROS2_V4/dobot_moveit/launch/: moveit_demo.launch.py  moveit_gazebo.launch.py
src/DOBOT_6Axis_ROS2_V4/dobot_moveit/scripts/: test_collision_geometry.py  test_gripper_modbus.py
src/DOBOT_6Axis_ROS2_V4/dobot_msgs_v4/: README.md
src/DOBOT_6Axis_ROS2_V4/dobot_rviz/: README.md
src/DOBOT_6Axis_ROS2_V4/dobot_rviz/launch/: display_isaac.launch.py
src/gz_conveyorbelt/: README.md
src/pruebas_de_vision/: README.md
yolo_training/: train.py  train_kartonger_resume.py
yolo_training/dataset/jugos_hit_v4/: README.dataset.txt  README.roboflow.txt  data.yaml
yolo_training/dataset/jugos_hit_v4/train/: labels.cache
yolo_training/dataset/jugos_hit_v4/train/labels/: WhatsApp-Video-2026-01-30-at-14_46_20_mp4-0000_jpg.rf.25df038391c5d6ee77ce01274d04dac3.txt  WhatsApp-Video-2026-01-30-at-14_46_20_mp4-0000_jpg.rf.37e2d1f5b0858802d35625c1bd31c246.txt  WhatsApp-Video-2026-01-30-at-14_46_20_mp4-0000_jpg.rf.561df7350fd844109ee24f0c8e6b5205.txt  (+1040 more)
