<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dobot_moveit</name>
  <version>0.0.0</version>
  <description>
    MoveIt action server and joint state publisher for Dobot CR20 robot.
    Compatible with ROS2 Humble and Isaac Sim.
  </description>
  <maintainer email="iudc@example.com">IUDC</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <!-- MoveIt2 Python -->
  <depend>moveit_ros_planning_interface</depend>
  
  <!-- Isaac Sim support -->
  <exec_depend>ros_ign_bridge</exec_depend>

  <!-- Custom packages -->
  <exec_depend>dobot_msgs_v4</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
